2003-09-14  John Levon  <levon@movementarian.org>

	* pp/opgprof_options.h:
	* pp/opgprof_options.cpp:
	* pp/opgprof.cpp: use arrange_profiles API

2003-09-14  John Levon  <levon@movementarian.org>

	* libpp/Makefile.am:
	* libpp/arrange_profiles.cpp:
	* libpp/arrange_profiles.h: introduce new
	code for partitioning profiles and handling
	merging

	* libpp/partition_files.h:
	* pp/opreport_options.cpp:
	* pp/opreport_options.h:
	* pp/opreport.cpp: use the above code

	* libpp/format_flags.h:
	* libpp/profile_container.cpp: remove unneeded
	multiple apps hint

	* libpp/count_array.cpp:
	* libpp/count_array.h: remove unnecessary code

2003-09-14  John Levon  <levon@movementarian.org>

	* configure.in: back to 0.7cvs

2003-09-14  John Levon  <levon@movementarian.org>

	* pp/opannotate.cpp: gcc 2.91 workaround
	(in 0.6.1 release)

2003-09-14  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.6.1

2003-09-13  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: document "incorrect source attribution"
	a bit

2003-09-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/op_header.cpp: typo in comment

2003-09-11  John Levon  <levon@movementarian.org>

	* configure.in: check for -lintl, tweak -ldl check

2003-09-11  John Levon  <levon@movementarian.org>

	* dae/oprofiled.c:
	* daemon/oprofiled.c:
	* libdb/db_manage.c:
	* libdb/db_test.c: correct headers

2003-09-11  John Levon  <levon@movementarian.org>

	* op_lockfile.c: use correct headers

2003-09-07  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/op_help.c: check than all events are distincts

2003-09-06  Philippe Elie  <phil.el@wanadoo.fr>

	* pch-c++.h:
	* m4/precompiledheader.m4: new file to handle precompiled header
	* m4/Makefile.am:
	* configure.in:
	* Makefile.am: handle precompiled header

2003-09-05  John Levon  <levon@movementarian.org>

	* opd_image.c: cleanup of ctx_switch_set_image()

2003-09-05  Philippe Elie  <phil.el@wanadoo.fr>
